--- a/proto/annotation-tools/viewer-cornerstone.html
+++ b/proto/annotation-tools/viewer-cornerstone.html
@@ -13,11 +13,14 @@
 <head>
     <title>Viewer (Cornerstone)</title>
 
+    <!-- libraries -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
     <script src="https://unpkg.com/cornerstone-core@2.2.6/dist/cornerstone.js"></script>
     <script src="https://unpkg.com/cornerstone-math@0.1.6/dist/cornerstoneMath.js"></script>
     <script src="https://unpkg.com/cornerstone-web-image-loader@2.1.0/dist/cornerstoneWebImageLoader.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/cornerstone-tools@3.0.0-b.717/dist/cornerstoneTools.js"></script>
+    
+    <!-- my script -->
     <script src="js/viewer-cornerstone.js"></script>
 
     <style>
@@ -27,19 +30,21 @@
         }
 
         #viewer {
-            position: absolute;
-            top: 50px;
-            left: 50px;
+            margin: auto;
+            border: thick;
+            border-style: inset;
             border-width: 10px;
             border-color: black;
             width: 500px;
-            height: 500px;
+            height: 300px;
+            padding: 100px;
+            text-align: center;
         }
     </style>
 </head>
 
 <body>
-    <div id="viewer">HELLO</div>
+    <canvas id="viewer">VIEWER PLACEHOLDER</div>
 </body>
 
 </html>
