centered the viewer

--- a/proto/annotation-tools/viewer-cornerstone.html
+++ b/proto/annotation-tools/viewer-cornerstone.html
@@ -30,7 +30,9 @@
         }
 
         #viewer {
-            margin: auto;
+            margin-left: auto;
+            margin-right: auto;
+            display: block;
             border: thick;
             border-style: inset;
             border-width: 10px;
@@ -44,7 +46,7 @@
 </head>
 
 <body>
-    <canvas id="viewer">VIEWER PLACEHOLDER</div>
+    <canvas id="viewer"></canvas>
 </body>
 
 </html>
