added way to choose tools

--- a/proto/overlay/viewer.html
+++ b/proto/overlay/viewer.html
@@ -36,7 +36,7 @@
     <div id="toolbox">
         <input type="button" onclick="enableZoom()" value="Enable Zoom">
         <input type="button" onclick="enableMeasurement()" value="Enable Measurement">
-        <input type="button" onclick="enableAnnotation()" value="Enable Annotation"
+        <input type="button" onclick="enableAnnotation()" value="Enable Annotation">
     </div>
 </body>
 
