--- a/proto/plugin/viewer.html
+++ b/proto/plugin/viewer.html
@@ -1,6 +1,6 @@
 <!--
     viewer.html
-    Holds the overlayed OpenSeadragon and Cornerstone viewers
+    Holds the OSD viewer
     By Nicholas Verrochi
     For CS410 - The Axolotl Project
 -->
@@ -17,6 +17,13 @@
 
 <body>
     <div id="viewer"></div>
+    <input type="button" id="zoom-in-button" value="Zoom In">
+    <input type="button" id="zoom-out-button" value="Zoom Out">
+    <input type="button" id="previous-button" value="Previous">
+    <input type="button" id="next-button" value="Next">
+    <input type="button" id="measure-button" value="Measure">
+    <div id="coordinates">Coordinates:</div>
+    <div id="measurements"></div>
 </body>
 
 </html>
