--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <html>
 
 <head>
-    <title>The Axolot Project</title>
+    <title>The Axolotl Project</title>
     <link rel="stylesheet" href="style/index.css">
     <script src="js/index.js"></script>
 </head>
