bug fixes - now it works!

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
     <h1 class="centered">The Axolotl Project</h1>
-    <h3 class="centered">By Nicholas Verrochi, Vidhya Sree Narayanappa, and Sairam Bandarupalli</h3>
+    <h3 class="centered">By Nicholas Verrochi, Vidhya Sree Narayanappa, Sairam Bandarupalli, and Andy Duverneau</h3>
     <p class="centered" id="blurb">
         Welcome to The Axolotl Project! This software is a special measuring tool that can take high-resolution scans
         and
