--- a/viewer.html
+++ b/viewer.html
@@ -17,8 +17,9 @@
     <script src="lib/annotorious-shape-labels.min.js"></script>
     <script src="lib/fabricjs.min.js"></script>
     <script src="lib/openseadragon-fabricjs-overlay.js"></script>
+    <link rel="stylesheet" href="lib/annotorious.min.css">
 
-    <script src="js/osd-measure-and-annotate.js"></script>
+    <script src="js/OSDMeasureAndAnnotate.js"></script>
     <script src="js/viewer.js"></script>
 </head>
 
