--- a/viewer.html
+++ b/viewer.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="lib/annotorious.min.css">
 
     <script src="js/OSDMeasureAndAnnotate.js"></script>
-    <script src="js/viewer.js"></script>
+    <script src="js/views/viewer.js"></script>
 </head>
 
 <body>
