--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <head>
     <title>The Axolotl Project</title>
     <link rel="stylesheet" href="style/index.css">
-    <script src="js/index.js"></script>
+    <script src="js/views/index.js"></script>
 </head>
 
 <body>
