removed annotations class (already built in to annotorious) and setup constructors

--- a/viewer.html
+++ b/viewer.html
@@ -19,6 +19,8 @@
     <script src="lib/openseadragon-fabricjs-overlay.js"></script>
     <link rel="stylesheet" href="lib/annotorious.min.css">
 
+    <script src="js/models/Measurement.js"></script>
+    <script src="js/models/Point.js"></script>
     <script src="js/OSDMeasureAndAnnotate.js"></script>
     <script src="js/views/viewer.js"></script>
 </head>
