--- a/viewer.html
+++ b/viewer.html
@@ -22,7 +22,7 @@
     <script src="js/models/Measurement.js"></script>
     <script src="js/models/Point.js"></script>
     <script src="js/OSDMeasureAndAnnotate.js"></script>
-    <script src="js/views/viewer.js"></script>
+    <script src="js/controllers/viewer.js"></script>
 </head>
 
 <body>
