--- a/viewer.html
+++ b/viewer.html
@@ -31,6 +31,7 @@
         <input type="button" id="zoom-in-button" value="Zoom In">
         <input type="button" id="zoom-out-button" value="Zoom Out">
         <input type="button" id="measure-button" value="Measure" onclick="measureButton()">
+        <input type="button" id="reset-button" value="Reset" onclick="resetButton()">
     </div>
 </body>
 
