got it working! button even shuts off when not possible to undo

--- a/viewer.html
+++ b/viewer.html
@@ -32,6 +32,7 @@
         <input type="button" id="zoom-out-button" value="Zoom Out">
         <input type="button" id="measure-button" value="Measure" onclick="measureButton()">
         <input type="button" id="reset-button" value="Reset" onclick="resetButton()">
+        <input type="button" id="undo-button" value="Undo" onclick="undoButton()">
     </div>
 </body>
 
