Partial rotation of grid

--- a/proto/grid/viewer.html
+++ b/proto/grid/viewer.html
@@ -21,6 +21,7 @@
     <input type="button" id="zoom-in-button" value="Zoom In">
     <input type="button" id="zoom-out-button" value="Zoom Out">
     <input type="button" id="measure-button" value="Measure" onclick="measureButton();">
+    <input type="button" id="grid-rotation" value="RotateGrid" onclick="rotateGrid();">
     <div id="measurements"></div>
 </body>
 
