redo button works, have to fix behavior with reset

--- a/viewer.html
+++ b/viewer.html
@@ -33,6 +33,7 @@
         <input type="button" id="measure-button" value="Measure" onclick="measureButton()">
         <input type="button" id="reset-button" value="Reset" onclick="resetButton()">
         <input type="button" id="undo-button" value="Undo" onclick="undoButton()">
+        <input type="button" id="redo-button" value="Redo" onclick="redoButton()">
         <span id="options" hidden="hidden">
             <input type="color" id="measurement-color" name="measurement-color" onchange="setColor()">
             <label for="measurement-color">Measurement Color</label>
