Made viewer full page and added keyboard shortcuts

--- a/keyboard-viewer.html
+++ b/keyboard-viewer.html
@@ -27,7 +27,7 @@
 
 <body>
 <div id="viewer" style="height:100vh;width:100vw;background-color:black"></div>
-<div id="info-box">
+<div id="info" >
   Measure : m<br>
   StopMeasure : q<br>
   undo : ctrl + z<br>
