--- a/keyboard-index.html
+++ b/keyboard-index.html
@@ -35,105 +35,105 @@
     <div id="W255B" class="selector-row">
         <div id="W255B_0" class="image-block">
             <a href="keyboard-viewer.html?tileSource=W255B_0" target="_blank">W255B_0</a><br />
-            <iframe src="preview-viewer.html?tileSource=W255B_0"></iframe>
+            <iframe src="keyboard-preview.html?tileSource=W255B_0"></iframe>
         </div>
         <div id="W255B_1" class="image-block">
             <a href="keyboard-viewer.html?tileSource=W255B_1" target="_blank">W255B_1</a><br />
-            <iframe src="preview-viewer.html?tileSource=W255B_1"></iframe>
+            <iframe src="keyboard-preview.html?tileSource=W255B_1"></iframe>
         </div>
         <div id="W255B_2" class="image-block">
             <a href="keyboard-viewer.html?tileSource=W255B_2" target="_blank">W255B_2</a><br />
-            <iframe src="preview-viewer.html?tileSource=W255B_2"></iframe>
+            <iframe src="keyboard-preview.html?tileSource=W255B_2"></iframe>
         </div>
     </div>
 
     <div id="W324B" class="selector-row">
         <div id="W324B_0" class="image-block">
             <a href="keyboard-viewer.html?tileSource=W324B_0" target="_blank">W324B_0</a><br />
-            <iframe src="preview-viewer.html?tileSource=W324B_0"></iframe>
+            <iframe src="keyboard-preview.html?tileSource=W324B_0"></iframe>
         </div>
         <div id="W324B_1" class="image-block">
             <a href="keyboard-viewer.html?tileSource=W324B_1" target="_blank">W324B_1</a><br />
-            <iframe src="preview-viewer.html?tileSource=W324B_1"></iframe>
+            <iframe src="keyboard-preview.html?tileSource=W324B_1"></iframe>
         </div>
         <div id="W324B_2" class="image-block">
             <a href="keyboard-viewer.html?tileSource=W324B_2" target="_blank">W324B_2</a><br />
-            <iframe src="preview-viewer.html?tileSource=W324B_2"></iframe>
+            <iframe src="keyboard-preview.html?tileSource=W324B_2"></iframe>
         </div>
     </div>
 
     <div id="W326B" class="selector-row">
         <div id="W326B_0" class="image-block">
             <a href="keyboard-viewer.html?tileSource=W326B_0" target="_blank">W326B_0</a><br />
-            <iframe src="preview-viewer.html?tileSource=W326B_0"></iframe>
+            <iframe src="keyboard-preview.html?tileSource=W326B_0"></iframe>
         </div>
         <div id="W326B_1" class="image-block">
             <a href="keyboard-viewer.html?tileSource=W326B_1" target="_blank">W326B_1</a><br />
-            <iframe src="preview-viewer.html?tileSource=W326B_1"></iframe>
+            <iframe src="keyboard-preview.html?tileSource=W326B_1"></iframe>
         </div>
         <div id="W326B_2" class="image-block">
             <a href="keyboard-viewer.html?tileSource=W326B_2" target="_blank">W326B_2</a><br />
-            <iframe src="preview-viewer.html?tileSource=W326B_2"></iframe>
+            <iframe src="keyboard-preview.html?tileSource=W326B_2"></iframe>
         </div>
     </div>
 
     <div id="W340B" class="selector-row">
         <div id="W340B_0" class="image-block">
             <a href="keyboard-viewer.html?tileSource=W340B_0" target="_blank">W340B_0</a><br />
-            <iframe src="preview-viewer.html?tileSource=W340B_0"></iframe>
+            <iframe src="keyboard-preview.html?tileSource=W340B_0"></iframe>
         </div>
         <div id="W340B_1" class="image-block">
             <a href="keyboard-viewer.html?tileSource=W340B_1" target="_blank">W340B_1</a><br />
-            <iframe src="preview-viewer.html?tileSource=W340B_1"></iframe>
+            <iframe src="keyboard-preview.html?tileSource=W340B_1"></iframe>
         </div>
         <div id="W340B_2" class="image-block">
             <a href="keyboard-viewer.html?tileSource=W340B_2" target="_blank">W340B_2</a><br />
-            <iframe src="preview-viewer.html?tileSource=W340B_2"></iframe>
+            <iframe src="keyboard-preview.html?tileSource=W340B_2"></iframe>
         </div>
     </div>
 
     <div id="W353B" class="selector-row">
         <div id="W353B_0" class="image-block">
             <a href="keyboard-viewer.html?tileSource=W353B_0" target="_blank">W353B_0</a><br />
-            <iframe src="preview-viewer.html?tileSource=W353B_0"></iframe>
+            <iframe src="keyboard-preview.html?tileSource=W353B_0"></iframe>
         </div>
         <div id="W353B_1" class="image-block">
             <a href="keyboard-viewer.html?tileSource=W353B_1" target="_blank">W353B_1</a><br />
-            <iframe src="preview-viewer.html?tileSource=W353B_1"></iframe>
+            <iframe src="keyboard-preview.html?tileSource=W353B_1"></iframe>
         </div>
         <div id="W353B_2" class="image-block">
             <a href="keyboard-viewer.html?tileSource=W353B_2" target="_blank">W353B_2</a><br />
-            <iframe src="preview-viewer.html?tileSource=W353B_2"></iframe>
+            <iframe src="keyboard-preview.html?tileSource=W353B_2"></iframe>
         </div>
     </div>
 
     <div id="W409B" class="selector-row">
         <div id="W409B_0" class="image-block">
             <a href="keyboard-viewer.html?tileSource=W409B_0" target="_blank">W409B_0</a><br />
-            <iframe src="preview-viewer.html?tileSource=W409B_0"></iframe>
+            <iframe src="keyboard-preview.html?tileSource=W409B_0"></iframe>
         </div>
         <div id="W409B_1" class="image-block">
             <a href="keyboard-viewer.html?tileSource=W409B_1" target="_blank">W409B_1</a><br />
-            <iframe src="preview-viewer.html?tileSource=W409B_1"></iframe>
+            <iframe src="keyboard-preview.html?tileSource=W409B_1"></iframe>
         </div>
         <div id="W409B_2" class="image-block">
             <a href="keyboard-viewer.html?tileSource=W409B_2" target="_blank">W409B_2</a><br />
-            <iframe src="preview-viewer.html?tileSource=W409B_2"></iframe>
+            <iframe src="keyboard-preview.html?tileSource=W409B_2"></iframe>
         </div>
     </div>
 
     <div id="W411B" class="selector-row">
         <div id="W411B_0" class="image-block">
             <a href="keyboard-viewer.html?tileSource=W411B_0" target="_blank">W411B_0</a><br />
-            <iframe src="preview-viewer.html?tileSource=W411B_0"></iframe>
+            <iframe src="keyboard-preview.html?tileSource=W411B_0"></iframe>
         </div>
         <div id="W411B_1" class="image-block">
             <a href="keyboard-viewer.html?tileSource=W411B_1" target="_blank">W411B_1</a><br />
-            <iframe src="preview-viewer.html?tileSource=W411B_1"></iframe>
+            <iframe src="keyboard-preview.html?tileSource=W411B_1"></iframe>
         </div>
         <div id="W411B_2" class="image-block">
             <a href="keyboard-viewer.html?tileSource=W411B_2" target="_blank">W411B_2</a><br />
-            <iframe src="preview-viewer.html?tileSource=W411B_2"></iframe>
+            <iframe src="keyboard-preview.html?tileSource=W411B_2"></iframe>
         </div>
     </div>
 
