set up some toString functions for data models

--- a/keyboard-viewer.html
+++ b/keyboard-viewer.html
@@ -28,8 +28,8 @@
 <body>
 <div id="viewer" style="height:100vh;width:100vw;background-color:black"></div>
 <div id="info" >
-  Measure : m<br>
-  StopMeasure : q<br>
+  measure : m<br>
+  stop measuring : q<br>
   undo : ctrl + z<br>
   redo : ctrl + y<br>
   reset : r
