--- a/viewer.html
+++ b/viewer.html
@@ -34,6 +34,7 @@
         <input type="button" id="reset-button" value="Reset" onclick="resetButton()">
         <input type="button" id="undo-button" value="Undo" onclick="undoButton()">
         <input type="button" id="redo-button" value="Redo" onclick="redoButton()">
+        <input type="button" id="export-csv-button" value="Export CSV" onclick="exportCSVButton()">
     </div>
     <div class="centered" id="options" hidden="hidden">
         <input type="color" id="measurement-color" name="measurement-color" onchange="setColor()">
