Added Color selection option for measurements

--- a/keyboard-viewer.html
+++ b/keyboard-viewer.html
@@ -28,6 +28,8 @@
 <body>
 <div id="viewer" style="height:100vh;width:100vw;background-color:black"></div>
 <div id="info" >
+  <label for="measurement-color">Select color :</label>
+  <input type="color" id="measurement-color" name="measurement-color" onchange="setColor()" style="height:20px;width:20px;border-width:thin;"><br>
   Measure : m<br>
   StopMeasure : q<br>
   undo : ctrl + z<br>
