--- a/viewer.html
+++ b/viewer.html
@@ -36,11 +36,15 @@
         <input type="button" id="redo-button" value="Redo" onclick="redoButton()">
         <input type="button" id="export-csv-button" value="Export CSV" onclick="exportCSVButton()">
     </div>
-    <div class="centered" id="options" hidden="hidden">
-        <input type="color" id="measurement-color" name="measurement-color" onchange="setColor()">
-        <label for="measurement-color">Measurement color</label><br /><br />
-        <input type="checkbox" id="grid-checkbox" name="grid-checkbox">
-        <label for="grid-checkbox">Measuring guides</label>
+    <div id="shortcuts">
+        <label for="measurement-color">Select color :</label>
+        <input type="color" id="measurement-color" name="measurement-color" onchange="setColor()"><br>
+        measure: m<br>
+        stop measuring: q<br>
+        undo: ctrl + z<br>
+        redo: ctrl + y<br>
+        export csv: ctrl + e<br> 
+        reset: r
     </div>
 </body>
 
