--- a/proto/grid-slider/viewer.html
+++ b/proto/grid-slider/viewer.html
@@ -1,6 +1,6 @@
 <!--
     viewer.html
-    By Vidhya Sree Narayanappa
+    By SAIRAM BANDARUPALLI
     For CS410 - The Axolotl Project
 -->
 
@@ -26,7 +26,7 @@
 </label>
 <br>
 <br>
-<input type="button" id="grid-rotation" value="Rotate Grid" onclick="rotateGrid();" class="visible">
+
 
 </body>
 
