fixed css so menu displays

--- a/viewer.html
+++ b/viewer.html
@@ -49,7 +49,7 @@
         <div class="dot"></div>
     </div>
 
-    <div class="measurement-menu">
+    <div id="measurement-menu">
         <ul>
             <li>Measurements:</li>
         </ul>
