display menu via javascript instead of css - that way it can open and close

--- a/viewer.html
+++ b/viewer.html
@@ -49,7 +49,7 @@
         <div class="dot"></div>
     </div>
 
-    <div id="measurement-menu">
+    <div id="measurement-menu" hidden="hidden">
         <ul>
             <li>Measurements:</li>
         </ul>
