--- a/viewer.html
+++ b/viewer.html
@@ -1,7 +1,7 @@
 <!--
     viewer.html
     Holds the OSD viewer
-    By Nicholas Verrochi
+    By Nicholas Verrochi and Vidhya Sree N
     For CS410 - The Axolotl Project
 -->
 
@@ -39,8 +39,6 @@
     <div id="shortcuts">
         <label for="measurement-color">Select color :</label>
         <input type="color" id="measurement-color" name="measurement-color" onchange="setColor()"><br>
-        measure: m<br>
-        stop measuring: q<br>
         undo: ctrl + z<br>
         redo: ctrl + y<br>
         export csv: ctrl + e<br> 
