added event dispatching

--- a/viewer.html
+++ b/viewer.html
@@ -52,6 +52,8 @@
     <div id="measurement-menu" hidden="hidden">
         <ul>
             <li>Measurements:</li>
+            <ul id="measurement-list">
+            </ul>
         </ul>
     </div>
 
