works after loading measurements at start - have to fix the event catching

--- a/viewer.html
+++ b/viewer.html
@@ -52,7 +52,7 @@
     <div id="measurement-menu" hidden="hidden">
         <ul>
             <li>Measurements:</li>
-            <ul id="measurement-list">
+            <ul id="measurement-list"><br/>
             </ul>
         </ul>
     </div>
