--- a/proto/grid-slider/viewer.html
+++ b/proto/grid-slider/viewer.html
@@ -26,7 +26,7 @@
 </label>
 <br>
 <br>
-
+<input type="button" id="grid-rotation" value="Rotate Grid" onclick="rotateGrid();" class="visible">
 
 </body>
 
