--- a/viewer.html
+++ b/viewer.html
@@ -28,19 +28,6 @@
 <body>
     <div class="centered" id="viewer"></div>
 
-    <div id="shortcuts">
-        <ul>
-            <li>
-                <label for="measurement-color">select color:</label>
-                <input type="color" id="measurement-color" name="measurement-color" onchange="setColor()">
-            </li>
-            <li>undo: ctrl + z</li>
-            <li>redo: ctrl + y</li>
-            <li>export csv: ctrl + e</li>
-            <li>reset: r</li>
-        </ul>
-    </div>
-
     <div id="menu-icon" tabindex="0">
         <div class="dot"></div>
         <div class="dot"></div>
@@ -49,12 +36,31 @@
 
     <div id="measurement-menu" hidden="hidden">
         <ul>
+            <label for="measurement-color">select color:</label>
+            <input type="color" id="measurement-color" name="measurement-color" onchange="setColor()">
+        </ul><br>
+        <ul>
             <li>Measurements:</li>
-            <ul id="measurement-list"><br/>
+            <ul id="measurement-list"><br>
             </ul>
         </ul>
+        <br>
+        <br>
+        <br>
+        <ul>
+            <button id="help-button" onclick="toggleShort()">Help</button>
+        </ul>
+        <ul>
+            <div id="short" style="display:none">
+                <ul>
+                    <li>undo: ctrl + z</li>
+                    <li>redo: ctrl + y</li>
+                    <li>export csv: ctrl + e</li>
+                    <li>reset: r</li>
+                </ul>
+            </div>
+        </ul>
     </div>
-
 </body>
 
 </html>
