--- a/viewer.html
+++ b/viewer.html
@@ -47,6 +47,7 @@
         <br>
         <br>
         <br>
+        <br>
         <ul>
             <button id="help-button" onclick="toggleShort()">Help</button>
         </ul>
@@ -60,6 +61,8 @@
                 </ul>
             </div>
         </ul>
+    </div>
+    <div id="measurement-details" style="display:none;">
     </div>
 </body>
 
