fixed annotation being overridden by keyboard shortcuts

--- a/viewer.html
+++ b/viewer.html
@@ -56,7 +56,7 @@
                     <li>undo: ctrl + z</li>
                     <li>redo: ctrl + y</li>
                     <li>export csv: ctrl + e</li>
-                    <li>reset: r</li>
+                    <li>reset: ctrl + r</li>
                 </ul>
             </div>
         </ul>
