did a bunch of clean-up, almost working

--- a/viewer.html
+++ b/viewer.html
@@ -40,7 +40,7 @@
             <input type="color" id="measurement-color" name="measurement-color" onchange="setColor()">
         </ul><br>
         <ul>
-            <li>Measurements:</li>
+            <li>measurements:</li>
             <ul id="measurement-list"><br>
             </ul>
         </ul>
@@ -49,10 +49,10 @@
         <br>
         <br>
         <ul>
-            <button id="help-button" onclick="toggleShort()">Help</button>
+            <button id="help-button" onclick="toggleShortcuts()">help</button>
         </ul>
         <ul>
-            <div id="short" style="display:none">
+            <div id="shortcuts">
                 <ul>
                     <li>undo: ctrl + z</li>
                     <li>redo: ctrl + y</li>
@@ -62,7 +62,7 @@
             </div>
         </ul>
     </div>
-    <div id="measurement-details" style="display:none;">
+    <div id="measurement-details">
     </div>
 </body>
 
