fixed bug where shortcuts needed the button to be pressed twice

--- a/viewer.html
+++ b/viewer.html
@@ -52,7 +52,7 @@
             <button id="help-button" onclick="toggleShortcuts()">help</button>
         </ul>
         <ul>
-            <div id="shortcuts">
+            <div id="shortcuts" hidden="hidden">
                 <ul>
                     <li>undo: ctrl + z</li>
                     <li>redo: ctrl + y</li>
