--- a/preview-viewer.html
+++ b/preview-viewer.html
@@ -16,7 +16,7 @@
         <script src="lib/openseadragon.min.js"></script>
 
         <link rel="stylesheet" href="style/preview-viewer.css">
-        <script src="js/controllers/preview-viewer.js"></script>
+        <script src="js/preview-viewer.js"></script>
     </head>
 
     <body>
