--- a/viewer.html
+++ b/viewer.html
@@ -19,10 +19,10 @@
     <script src="lib/openseadragon-fabricjs-overlay.js"></script>
     <link rel="stylesheet" href="lib/annotorious.min.css">
 
-    <script src="js/models/Measurement.js"></script>
-    <script src="js/models/Point.js"></script>
-    <script src="js/OSDMeasureAndAnnotate.js"></script>
-    <script src="js/controllers/viewer.js"></script>
+    <script src="js/OSDMeasure/models/Measurement.js"></script>
+    <script src="js/OSDMeasure/models/Point.js"></script>
+    <script src="js/OSDMeasure/controllers/OSDMeasure.js"></script>
+    <script src="js/viewer.js"></script>
 </head>
 
 <body>
