menu Icon working

--- a/viewer.html
+++ b/viewer.html
@@ -22,17 +22,21 @@
     <script src="js/OSDMeasure/models/Measurement.js"></script>
     <script src="js/OSDMeasure/models/Point.js"></script>
     <script src="js/OSDMeasure/controllers/OSDMeasure.js"></script>
+    <script src="js/OSDMeasure/views/MenuIcon.js"></script>
+    <script src="js/OSDMeasure/views/UI.js"></script>
     <script src="js/viewer.js"></script>
 </head>
 
 <body>
     <div class="centered" id="viewer"></div>
 
+    <!--
     <div id="menu-icon" tabindex="0">
         <div class="dot"></div>
         <div class="dot"></div>
         <div class="dot"></div>
     </div>
+    -->
 
     <div id="measurement-menu" hidden="hidden">
         <ul>
