--- a/viewer.html
+++ b/viewer.html
@@ -22,7 +22,9 @@
     <script src="js/OSDMeasure/models/Measurement.js"></script>
     <script src="js/OSDMeasure/models/Point.js"></script>
     <script src="js/OSDMeasure/controllers/OSDMeasure.js"></script>
+    <script src="js/OSDMeasure/controllers/GridViewerPlugin.js"></script>
     <script src="js/viewer.js"></script>
+
 </head>
 
 <body>
