--- a/viewer.html
+++ b/viewer.html
@@ -19,12 +19,16 @@
     <script src="lib/openseadragon-fabricjs-overlay.js"></script>
     <link rel="stylesheet" href="lib/annotorious.min.css">
 
+    <!-- OSDMeasure classes -->
+    <script src="js/OSDMeasure/controllers/OSDMeasure.js"></script>
     <script src="js/OSDMeasure/models/Measurement.js"></script>
     <script src="js/OSDMeasure/models/Point.js"></script>
-    <script src="js/OSDMeasure/controllers/OSDMeasure.js"></script>
+    <script src="js/OSDMeasure/views/MeasurementList.js"></script>
+    <script src="js/OSDMeasure/views/MeasurementListItem.js"></script>
     <script src="js/OSDMeasure/views/Menu.js"></script>
     <script src="js/OSDMeasure/views/MenuButton.js"></script>
     <script src="js/OSDMeasure/views/UI.js"></script>
+
     <script src="js/viewer.js"></script>
 </head>
 
