separated GridViewerPlugin from OSDMeasure

--- a/viewer.html
+++ b/viewer.html
@@ -28,7 +28,8 @@
     <script src="js/OSDMeasure/views/Menu.js"></script>
     <script src="js/OSDMeasure/views/MenuButton.js"></script>
     <script src="js/OSDMeasure/views/UI.js"></script>
-    <script src="js/OSDMeasure/controllers/GridViewerPlugin.js"></script>
+
+    <script src="js/GridViewerPlugin.js"></script>
     <script src="js/viewer.js"></script>
 
 </head>
