bunch of changes

--- a/viewer.html
+++ b/viewer.html
@@ -10,6 +10,7 @@
 <head>
     <title>Viewer</title>
     <link rel="stylesheet" href="style/viewer.css">
+    <link rel="stylesheet" href="style/grid.css">
 
     <!-- library imports -->
     <script src="lib/openseadragon.min.js"></script>
@@ -29,6 +30,7 @@
     <script src="js/OSDMeasure/views/MenuButton.js"></script>
     <script src="js/OSDMeasure/views/UI.js"></script>
 
+    <script src="js/AnnotationHelper.js"></script>
     <script src="js/GridViewerPlugin.js"></script>
     <script src="js/viewer.js"></script>
 
