setup buttons, moved keyboard shortcuts so the work without using the default UI

--- a/viewer.html
+++ b/viewer.html
@@ -24,6 +24,7 @@
     <script src="js/OSDMeasure/controllers/OSDMeasure.js"></script>
     <script src="js/OSDMeasure/models/Measurement.js"></script>
     <script src="js/OSDMeasure/models/Point.js"></script>
+    <script src="js/OSDMeasure/views/ButtonBar.js"></script>
     <script src="js/OSDMeasure/views/MeasurementList.js"></script>
     <script src="js/OSDMeasure/views/MeasurementListItem.js"></script>
     <script src="js/OSDMeasure/views/Menu.js"></script>
