started adding in Dexie, needs testing

--- a/viewer.html
+++ b/viewer.html
@@ -18,9 +18,11 @@
     <script src="lib/annotorious-shape-labels.min.js"></script>
     <script src="lib/fabricjs.min.js"></script>
     <script src="lib/openseadragon-fabricjs-overlay.js"></script>
+    <script src="lib/dexie.min.js"></script>
     <link rel="stylesheet" href="lib/annotorious.min.css">
 
     <!-- OSDMeasure classes -->
+    <script src="js/OSDMeasure/controllers/DBWrapper.js"></script>
     <script src="js/OSDMeasure/controllers/OSDMeasure.js"></script>
     <script src="js/OSDMeasure/models/Measurement.js"></script>
     <script src="js/OSDMeasure/models/Point.js"></script>
