--- a/viewer.html
+++ b/viewer.html
@@ -19,6 +19,7 @@
     <script src="lib/fabricjs.min.js"></script>
     <script src="lib/openseadragon-fabricjs-overlay.js"></script>
     <script src="lib/dexie.min.js"></script>
+    <script src="lib/openseadragon-scalebar.js"></script>
     <link rel="stylesheet" href="lib/annotorious.min.css">
 
     <!-- OSDMeasure classes -->
