Updated Contributers Name

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     to select one of the built-in images, or enter
     a link to a valid image (must be hosted online)
 
-    By Nicholas Verrochi
+    By Nicholas Verrochi and Vidhya Sree N
     For CS410 - The Axolotl Project
 -->
 
