--- a/preview-viewer.html
+++ b/preview-viewer.html
@@ -5,7 +5,7 @@
     a small preview of an image within an actual
     OpenSeadragon viewer, but without buttons.
 
-    By Nicholas Verrochi
+    By Nicholas Verrochi and Vidhya Sree N
 
     For CS410 - The Axolotl Project
 -->
